name:               amazonka-budgets
version:            1.6.1
synopsis:           Amazon Budgets SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           Network, AWS, Cloud, Distributed Computing
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests,
  and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.Budgets.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.Budgets" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-budgets

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.Budgets
    Network.AWS.Budgets.CreateBudget
    Network.AWS.Budgets.CreateBudgetAction
    Network.AWS.Budgets.CreateNotification
    Network.AWS.Budgets.CreateSubscriber
    Network.AWS.Budgets.DeleteBudget
    Network.AWS.Budgets.DeleteBudgetAction
    Network.AWS.Budgets.DeleteNotification
    Network.AWS.Budgets.DeleteSubscriber
    Network.AWS.Budgets.DescribeBudget
    Network.AWS.Budgets.DescribeBudgetAction
    Network.AWS.Budgets.DescribeBudgetActionHistories
    Network.AWS.Budgets.DescribeBudgetActionsForAccount
    Network.AWS.Budgets.DescribeBudgetActionsForBudget
    Network.AWS.Budgets.DescribeBudgetPerformanceHistory
    Network.AWS.Budgets.DescribeBudgets
    Network.AWS.Budgets.DescribeNotificationsForBudget
    Network.AWS.Budgets.DescribeSubscribersForNotification
    Network.AWS.Budgets.ExecuteBudgetAction
    Network.AWS.Budgets.Lens
    Network.AWS.Budgets.Types
    Network.AWS.Budgets.Types.Action
    Network.AWS.Budgets.Types.ActionHistory
    Network.AWS.Budgets.Types.ActionHistoryDetails
    Network.AWS.Budgets.Types.ActionStatus
    Network.AWS.Budgets.Types.ActionSubType
    Network.AWS.Budgets.Types.ActionThreshold
    Network.AWS.Budgets.Types.ActionType
    Network.AWS.Budgets.Types.ApprovalModel
    Network.AWS.Budgets.Types.Budget
    Network.AWS.Budgets.Types.BudgetedAndActualAmounts
    Network.AWS.Budgets.Types.BudgetPerformanceHistory
    Network.AWS.Budgets.Types.BudgetType
    Network.AWS.Budgets.Types.CalculatedSpend
    Network.AWS.Budgets.Types.ComparisonOperator
    Network.AWS.Budgets.Types.CostTypes
    Network.AWS.Budgets.Types.Definition
    Network.AWS.Budgets.Types.EventType
    Network.AWS.Budgets.Types.ExecutionType
    Network.AWS.Budgets.Types.IamActionDefinition
    Network.AWS.Budgets.Types.Notification
    Network.AWS.Budgets.Types.NotificationState
    Network.AWS.Budgets.Types.NotificationType
    Network.AWS.Budgets.Types.NotificationWithSubscribers
    Network.AWS.Budgets.Types.ScpActionDefinition
    Network.AWS.Budgets.Types.Spend
    Network.AWS.Budgets.Types.SsmActionDefinition
    Network.AWS.Budgets.Types.Subscriber
    Network.AWS.Budgets.Types.SubscriptionType
    Network.AWS.Budgets.Types.ThresholdType
    Network.AWS.Budgets.Types.TimePeriod
    Network.AWS.Budgets.Types.TimeUnit
    Network.AWS.Budgets.UpdateBudget
    Network.AWS.Budgets.UpdateBudgetAction
    Network.AWS.Budgets.UpdateNotification
    Network.AWS.Budgets.UpdateSubscriber
    Network.AWS.Budgets.Waiters

  reexported-modules: Network.AWS.Prelude
  build-depends:
      amazonka-core  >=1.6.1 && <1.6.2
    , base           >=4.13  && <5

test-suite amazonka-budgets-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.Budgets
    Test.AWS.Budgets.Internal
    Test.AWS.Gen.Budgets

  build-depends:
      amazonka-budgets
    , amazonka-core         >=1.6.1 && <1.6.2
    , amazonka-test         >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
