cabal-version:      2.2
name:               amazonka-certificatemanager-pca
version:            1.6.1
synopsis:
  Amazon Certificate Manager Private Certificate Authority SDK.

homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2017-08-22@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.CertificateManagerPCA.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.CertificateManagerPCA" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-certificatemanager-pca

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.CertificateManagerPCA
    Network.AWS.CertificateManagerPCA.CreateCertificateAuthority
    Network.AWS.CertificateManagerPCA.CreateCertificateAuthorityAuditReport
    Network.AWS.CertificateManagerPCA.CreatePermission
    Network.AWS.CertificateManagerPCA.DeleteCertificateAuthority
    Network.AWS.CertificateManagerPCA.DeletePermission
    Network.AWS.CertificateManagerPCA.DeletePolicy
    Network.AWS.CertificateManagerPCA.DescribeCertificateAuthority
    Network.AWS.CertificateManagerPCA.DescribeCertificateAuthorityAuditReport
    Network.AWS.CertificateManagerPCA.GetCertificate
    Network.AWS.CertificateManagerPCA.GetCertificateAuthorityCertificate
    Network.AWS.CertificateManagerPCA.GetCertificateAuthorityCsr
    Network.AWS.CertificateManagerPCA.GetPolicy
    Network.AWS.CertificateManagerPCA.ImportCertificateAuthorityCertificate
    Network.AWS.CertificateManagerPCA.IssueCertificate
    Network.AWS.CertificateManagerPCA.Lens
    Network.AWS.CertificateManagerPCA.ListCertificateAuthorities
    Network.AWS.CertificateManagerPCA.ListPermissions
    Network.AWS.CertificateManagerPCA.ListTags
    Network.AWS.CertificateManagerPCA.PutPolicy
    Network.AWS.CertificateManagerPCA.RestoreCertificateAuthority
    Network.AWS.CertificateManagerPCA.RevokeCertificate
    Network.AWS.CertificateManagerPCA.TagCertificateAuthority
    Network.AWS.CertificateManagerPCA.Types
    Network.AWS.CertificateManagerPCA.Types.AccessDescription
    Network.AWS.CertificateManagerPCA.Types.AccessMethod
    Network.AWS.CertificateManagerPCA.Types.AccessMethodType
    Network.AWS.CertificateManagerPCA.Types.ActionType
    Network.AWS.CertificateManagerPCA.Types.ApiPassthrough
    Network.AWS.CertificateManagerPCA.Types.ASN1Subject
    Network.AWS.CertificateManagerPCA.Types.AuditReportResponseFormat
    Network.AWS.CertificateManagerPCA.Types.AuditReportStatus
    Network.AWS.CertificateManagerPCA.Types.CertificateAuthority
    Network.AWS.CertificateManagerPCA.Types.CertificateAuthorityConfiguration
    Network.AWS.CertificateManagerPCA.Types.CertificateAuthorityStatus
    Network.AWS.CertificateManagerPCA.Types.CertificateAuthorityType
    Network.AWS.CertificateManagerPCA.Types.CrlConfiguration
    Network.AWS.CertificateManagerPCA.Types.CsrExtensions
    Network.AWS.CertificateManagerPCA.Types.EdiPartyName
    Network.AWS.CertificateManagerPCA.Types.ExtendedKeyUsage
    Network.AWS.CertificateManagerPCA.Types.ExtendedKeyUsageType
    Network.AWS.CertificateManagerPCA.Types.Extensions
    Network.AWS.CertificateManagerPCA.Types.FailureReason
    Network.AWS.CertificateManagerPCA.Types.GeneralName
    Network.AWS.CertificateManagerPCA.Types.KeyAlgorithm
    Network.AWS.CertificateManagerPCA.Types.KeyUsage
    Network.AWS.CertificateManagerPCA.Types.OtherName
    Network.AWS.CertificateManagerPCA.Types.Permission
    Network.AWS.CertificateManagerPCA.Types.PolicyInformation
    Network.AWS.CertificateManagerPCA.Types.PolicyQualifierId
    Network.AWS.CertificateManagerPCA.Types.PolicyQualifierInfo
    Network.AWS.CertificateManagerPCA.Types.Qualifier
    Network.AWS.CertificateManagerPCA.Types.ResourceOwner
    Network.AWS.CertificateManagerPCA.Types.RevocationConfiguration
    Network.AWS.CertificateManagerPCA.Types.RevocationReason
    Network.AWS.CertificateManagerPCA.Types.SigningAlgorithm
    Network.AWS.CertificateManagerPCA.Types.Tag
    Network.AWS.CertificateManagerPCA.Types.Validity
    Network.AWS.CertificateManagerPCA.Types.ValidityPeriodType
    Network.AWS.CertificateManagerPCA.UntagCertificateAuthority
    Network.AWS.CertificateManagerPCA.UpdateCertificateAuthority
    Network.AWS.CertificateManagerPCA.Waiters

  reexported-modules: Network.AWS
  build-depends:
    , amazonka  >=1.6.1 && <1.6.2
    , base      >=4.13  && <5

test-suite amazonka-certificatemanager-pca-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.CertificateManagerPCA
    Test.AWS.CertificateManagerPCA.Internal
    Test.AWS.Gen.CertificateManagerPCA

  build-depends:
    , amazonka                         >=1.6.1 && <1.6.2
    , amazonka-certificatemanager-pca
    , amazonka-test                    >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
