cabal-version:      2.2
name:               amazonka-cloud9
version:            1.6.1
synopsis:           Amazon Cloud9 SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2017-09-23@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.Cloud9.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.Cloud9" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-cloud9

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.Cloud9
    Network.AWS.Cloud9.CreateEnvironmentEC
    Network.AWS.Cloud9.CreateEnvironmentMembership
    Network.AWS.Cloud9.DeleteEnvironment
    Network.AWS.Cloud9.DeleteEnvironmentMembership
    Network.AWS.Cloud9.DescribeEnvironmentMemberships
    Network.AWS.Cloud9.DescribeEnvironments
    Network.AWS.Cloud9.DescribeEnvironmentStatus
    Network.AWS.Cloud9.Lens
    Network.AWS.Cloud9.ListEnvironments
    Network.AWS.Cloud9.ListTagsForResource
    Network.AWS.Cloud9.TagResource
    Network.AWS.Cloud9.Types
    Network.AWS.Cloud9.Types.ConnectionType
    Network.AWS.Cloud9.Types.Environment
    Network.AWS.Cloud9.Types.EnvironmentLifecycle
    Network.AWS.Cloud9.Types.EnvironmentLifecycleStatus
    Network.AWS.Cloud9.Types.EnvironmentMember
    Network.AWS.Cloud9.Types.EnvironmentStatus
    Network.AWS.Cloud9.Types.EnvironmentType
    Network.AWS.Cloud9.Types.ManagedCredentialsAction
    Network.AWS.Cloud9.Types.ManagedCredentialsStatus
    Network.AWS.Cloud9.Types.MemberPermissions
    Network.AWS.Cloud9.Types.Permissions
    Network.AWS.Cloud9.Types.Tag
    Network.AWS.Cloud9.UntagResource
    Network.AWS.Cloud9.UpdateEnvironment
    Network.AWS.Cloud9.UpdateEnvironmentMembership
    Network.AWS.Cloud9.Waiters

  reexported-modules: Network.AWS
  build-depends:
    , amazonka  >=1.6.1 && <1.6.2
    , base      >=4.12  && <5

test-suite amazonka-cloud9-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.Cloud9
    Test.AWS.Cloud9.Internal
    Test.AWS.Gen.Cloud9

  build-depends:
    , amazonka              >=1.6.1 && <1.6.2
    , amazonka-cloud9
    , amazonka-test         >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
